--- a/contact.html
+++ b/contact.html
@@ -150,9 +150,9 @@
                 <div class="validate"></div>
               </div>
               <div class="mb-3">
-                <div class="loading">Loading</div>
+                <!--div class="loading">Loading</div-->
                 <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+                <!--div class="sent-message">Your message has been sent. Thank you!</div-->
               </div>
               <div class="text-center"><button type="submit" class="pageclip-form__submit">Send Message</button></div>
             </form>
