--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 30 May 1997</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> shanvipatel.github.io</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 (224) 730-8184</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Boston, USA</li>
                 </ul>
@@ -116,41 +116,7 @@
 
    
 
-    <!-- ======= Facts Section ======= -->
-    <section id="facts" class="facts">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Facts</h2>
-          <p>I do not have a story yet. I have a plan. Finding a path to it...</p>
-        </div>
-
-        <div class="row counters">
-
-          <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">16</span>
-            <p>Certificates</p>
-          </div>
-
-          <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">23</span>
-            <p>Projects</p>
-          </div>
-
-          <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">1,463</span>
-            <p>Hours Of Support</p>
-          </div>
-
-          <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">5</span>
-            <p>Organizations</p>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Facts Section -->
+    
 
 
 
@@ -194,42 +160,88 @@
           </div>
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-            <h3>Jena Karlis</h3>
-            <h4>Store Owner</h4>
+            <img src="assets/img/testimonials/danny.jpeg" class="testimonial-img" alt="">
+            <h3>Danny Breegi</h3>
+            <h4>Director at Breegi Scientific</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+              Shanvi was an indispensable part of my regulatory team. Her worked exceeded all expectations and she was a fantastic leader as we pursued our FDA and global pathways.I am thankful to have had her as my regulatory consultant in 2020.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-            <h3>Matt Brandon</h3>
-            <h4>Freelancer</h4>
+            <img src="assets/img/testimonials/charmi.jpeg" class="testimonial-img" alt="">
+            <h3>Charmi Patel</h3>
+            <h4>Quality Assurance Specialist at Sophie</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+              I highly recommend her to as a regulatory affair professional, as she is very attention to detail and organizational. Her ability to work as a teammate helped us during hard times and we were able to innovate. She knows how to help her pairs and get the best out of them.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
 
-          <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-            <h3>John Larson</h3>
-            <h4>Entrepreneur</h4>
+          <!-- div class="testimonial-item">
+            <img src="assets/img/testimonials/lisa.jpeg" class="testimonial-img" alt="">
+            <h3>Lisa Donnelly</h3>
+            <h4>EVP and Business General Manager at Tecomet</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
-          </div>
+          </div -->
 
         </div>
 
       </div>
     </section><!-- End Testimonials Section -->
+
+
+
+
+
+
+<!-- ======= Facts Section ======= -->
+    <section id="facts" class="facts">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Facts</h2>
+          <p>I do not have a story yet. I have a plan. Finding a path to it...</p>
+        </div>
+
+        <div class="row counters">
+
+          <div class="col-lg-3 col-6 text-center">
+            <span data-toggle="counter-up">16</span>
+            <p>Certificates</p>
+          </div>
+
+          <div class="col-lg-3 col-6 text-center">
+            <span data-toggle="counter-up">23</span>
+            <p>Projects</p>
+          </div>
+
+          <div class="col-lg-3 col-6 text-center">
+            <span data-toggle="counter-up">1,463</span>
+            <p>Hours Of Support</p>
+          </div>
+
+          <div class="col-lg-3 col-6 text-center">
+            <span data-toggle="counter-up">5</span>
+            <p>Organizations</p>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Facts Section -->
+
+
+
+
+
 
   </main><!-- End #main -->
 
