--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
 
         <div class="section-title">
           <h2>Testimonials</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>A lot of people have achieved success, just because someone else believed in them. </p>
         </div>
 
         <div class="owl-carousel testimonials-carousel">
