--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <section id="hero" class="d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
       <h1>Shanvi Patel</h1>
-      <h2>I'm a Regulatory Affairs Professional from Boston</h2>
+      <h2>I'm a Regulatory Affairs Professional</h2>
       <a href="about.html" class="btn-about">About Me</a>
     </div>
   </section><!-- End Hero -->
