--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       <h1 class="logo"><a href="index.html"> SHANVI </a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <<a href="index.html" class="logo"><img src="assets/img/main.jpeg" alt="" class="img-fluid"></a>>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
