--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       <h1 class="logo"><a href="index.html"> SHANVI </a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <<a href="index.html" class="logo"><img src="assets/img/main.jpeg" alt="" class="img-fluid"></a>>
+      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -71,7 +71,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex align-items-center">
+  <section id="hero"s class="d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
       <h1>Shanvi Patel</h1>
       <h2>I'm a Regulatory Affairs Professional</h2>
