--- a/index.html
+++ b/index.html
@@ -90,8 +90,11 @@
   <section id="hero"s class="d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
       <h1>Shanvi Patel</h1>
-      <h2>I'm a Regulatory Affairs Professional</h2>
+      <h2 style="color:black;">I'm a Regulatory Affairs Professional</h2>
       <a href="about.html" class="btn-about">About Me</a>
+      <a href="resume.html" class="btn-about">Resume</a>
+      <a href="services.html" class="btn-about">Projects</a>
+
     </div>
   </section><!-- End Hero -->
 
