--- a/about.html
+++ b/about.html
@@ -204,7 +204,7 @@
             <h4>EVP and Business General Manager at Tecomet</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+              Shanvi certainly demonstrated her thorough understanding of the course material, she would be a great addition to a regulatory team. Her subject matter knowledge as well as attention to detail will serve her well in her career.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div -->
