--- a/about.html
+++ b/about.html
@@ -198,7 +198,7 @@
             </p>
           </div>
 
-          <!-- div class="testimonial-item">
+          <div class="testimonial-item">
             <img src="assets/img/testimonials/lisa.jpeg" class="testimonial-img" alt="">
             <h3>Lisa Donnelly</h3>
             <h4>EVP and Business General Manager at Tecomet</h4>
@@ -207,7 +207,7 @@
               Shanvi certainly demonstrated her thorough understanding of the course material, she would be a great addition to a regulatory team. Her subject matter knowledge as well as attention to detail will serve her well in her career.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
-          </div -->
+          </div>
 
         </div>
 
