--- a/about.html
+++ b/about.html
@@ -22,6 +22,15 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
+<meta property="og:locale" content="en_US" /> 
+<meta property="og:type" content="website" /> 
+<meta property="og:title" content="Regulatory Affairs Professional" /> 
+<meta property="og:description" content="1.5+ year of professional experience in creating submission dossiers for Drugs and Medical Devices " /> 
+<meta property="og:url" content="https://shanvipatel.github.io/" /> 
+<meta property="og:site_name" content="Shanvi's website" />  
+<meta property="og:image" content="https://shanvipatel.github.io/assets/img/shaanu.JPG" />
+
+
   <title>About - Shanvi Website </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
