--- a/services.html
+++ b/services.html
@@ -105,7 +105,7 @@
                 <i class="bx bx-user-plus"></i>
               </div>
               <h4><a href="">IND Submission</a></h4>
-              <p> Devised a Template for IND submission for an existing combination product in an eCTD format – Inbrija to bring in the US market</p>
+              <p> Created an eCTD compliant IND submission template for the combination product Inbrija</p>
             </div>
           </div>
 
@@ -118,7 +118,7 @@
                 <i class="bx bx-file"></i>
               </div>
               <h4><a href="">NDA Submission</a></h4>
-              <p>Built an NDA submission model for Inbrija, listing and explaining all 5 modules with detailed information about sub – sections</p>
+              <p>Built an NDA submission model for Inbrija, listing and explaining all CTD modules with detailed information about all sub – sections</p>
             </div>
           </div>
 
@@ -170,7 +170,7 @@
                 <i class="bx bx-list-check"></i>
               </div>
               <h4><a href="">IDE Template</a></h4>
-              <p>Generated a template on IDE for Atrial Fibrillator listing all necessary safety related guidance for pre-market for EU and FDA</p>
+              <p>Generated a template on IDE for Atrial Fibrillator listing all necessary safety related guidance for pre-market for EU and US</p>
             </div>
           </div>
 
@@ -184,7 +184,7 @@
                 <i class="bx bx-task"></i>
               </div>
               <h4><a href="">Informed Consent Form</a></h4>
-              <p>Drafted an Informed Consent Form for treating Alzheimer’s Disease and a Clinical Protocol for Parkinson’s Disease</p>
+              <p>Drafted a 21 CFR 50 compliant Informed Consent Form for Donepezil HCl for Alzheimer’s Disease with multi- center, open-label, single-arm, prospective, phase III trial</p>
             </div>
           </div>
 
@@ -200,7 +200,7 @@
                 <i class="bx bx-folder-open"></i>
               </div>
               <h4><a href="">Pre-Market Safety</a></h4>
-              <p>Wrote a research paper on safety study information (pre-market) explaining all relevant ICH and FDA guidance giving relevant examples from Inbrija</p>
+              <p>Composed a research paper on safety study information (pre-market) explaining ICH E2A, E2B(R3) and E6 along with ICH M3(R2), 21 CFR 320 and 321 giving examples from Inbrija like clinical pharmacological and safety and efficacy study data</p>
             </div>
           </div>
 
@@ -216,7 +216,7 @@
                 <i class="bx bx-layer"></i>
               </div>
               <h4><a href="">Post-Market Safety</a></h4>
-              <p>Devised a PBRER template for post market requirements for an existing combination product – Inbrija for the FDA and EU</p>
+              <p>Devised a PBRER/PSUR template for post market requirements for Inbrija for the US and EU with E2C(R2) and E2D, EU Regulation 726/2004, GVP Module VII and REMS Module V</p>
             </div>
           </div>
 
@@ -232,7 +232,7 @@
                 <i class="bx bx-clinic"></i>
               </div>
               <h4><a href="">Off-Label Promotion</a></h4>
-              <p>Wrote a research paper on Off-Label Promotion of an approved drug – Mifepristone with relevant guidance and CFRs </p>
+              <p>Wrote a research paper on Off-Label Promotion of an approved drug, Mifepristone, in accordance with 21 CFR 202 and 352</p>
             </div>
           </div>
 
@@ -248,10 +248,22 @@
                 <i class="bx bx-barcode"></i>
               </div>
               <h4><a href="">Drug Package Insert</a></h4>
-              <p>Researched how a package label is designed and relevant guidance for drug label</p>
+              <p>Researched how a package label is designed and relevant guidance for drug label as per 21 CFR 201</p>
             </div>
           </div>
 
+<div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+            <div class="icon-box iconbox-orange ">
+              <div class="icon">
+                <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,582.0697525312426C382.5290701553225,586.8405444964366,449.9789794690241,525.3245884688669,502.5850820975895,461.55621195738473C556.606425686781,396.0723002908107,615.8543463187945,314.28637112970534,586.6730223649479,234.56875336149918C558.9533121215079,158.8439757836574,454.9685369536778,164.00468322053177,381.49747125262974,130.76875717737553C312.15926192815925,99.40240125094834,248.97055460311594,18.661163978235184,179.8680185752513,50.54337015887873C110.5421016452524,82.52863877960104,119.82277516462835,180.83849132639028,109.12597500060166,256.43424936330496C100.08760227029461,320.3096726198365,92.17705696193138,384.0621239912766,124.79988738764834,439.7174275375508C164.83382741302287,508.01625554203684,220.96474134820875,577.5009287672846,300,582.0697525312426"></path>
+                </svg>
+                <i class="bx bx-file"></i>
+              </div>
+              <h4><a href="">Clinical Protocol</a></h4>
+              <p>Composed a Clinical Protocol, A Phase 2B, Twelve-week Multi-Center, Randomized, Double-Blind, Placebo- Controlled, Parallel Group Study, To Determine the Safety, Tolerability and Efficacy of Two Doses of Once Daily P2B001 in Subjects with early Parkinson’s Disease</p>
+            </div>
+          </div>
 
 
 
