--- a/services.html
+++ b/services.html
@@ -22,6 +22,15 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
+<meta prefix="og: http://ogp.me/ns#" property="og:locale" content="en_US" /> 
+<meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" /> 
+<meta prefix="og: http://ogp.me/ns#" property="og:title" content="Title" /> 
+<meta prefix="og: http://ogp.me/ns#" property="og:description" content="Description" /> 
+<meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://shanvipatel.github.io/" /> 
+<meta prefix="og: http://ogp.me/ns#" property="og:site_name" content="Shanvi's website" />  
+<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://shanvipatel.github.io/assets/img/shaanu.JPG" />
+
+
   <title>Projects - Shanvi </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
