--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <meta prefix="og: http://ogp.me/ns#" property="og:description" content="Description" /> 
 <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://shanvipatel.github.io/" /> 
 <meta prefix="og: http://ogp.me/ns#" property="og:site_name" content="Shanvi's website" />  
-<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://shanvipatel.github.io/assets/img/shaanu.JPG" />
+<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://shanvipatel.github.io/assets/img/shanu.JPG" />
 
 
   <title>Shanvi's website</title>
