--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -9,6 +9,16 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
+<meta prefix="og: http://ogp.me/ns#" property="og:locale" content="en_US" /> 
+<meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" /> 
+<meta prefix="og: http://ogp.me/ns#" property="og:title" content="Title" /> 
+<meta prefix="og: http://ogp.me/ns#" property="og:description" content="Description" /> 
+<meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://shanvipatel.github.io/" /> 
+<meta prefix="og: http://ogp.me/ns#" property="og:site_name" content="Shanvi's website" />  
+<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://shanvipatel.github.io/assets/img/shanu.JPG" />
+
+
+
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
