--- a/about.html
+++ b/about.html
@@ -115,16 +115,19 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 30 May 1997</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> shanvipatel.github.io</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 (224) 730-8184</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>LinkedIn: </strong>linkedin.com/in/shanvi305/</li>
+
+<li><i class="icofont-rounded-right"></i> <strong>Degree: </strong>Master's in Regulatory Affairs </li> 
+
+
+                  <!-- li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 (224) 730-8184</li -->
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Boston, USA</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master</li>
+                  
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> patel.shan@northeastern.edu</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Job type:</strong> Available for Full-time jobs</li>
 <li><i class="icofont-rounded-right"></i> <strong>Location: </strong>Willing to relocate</li>
