--- a/resume.html
+++ b/resume.html
@@ -179,6 +179,34 @@
 
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
+
+
+<div class="resume-item">
+              <h4>Regulatory Intelligence, Medical Devices </h4>
+              <h5>01/2021 - Present</h5>
+              <p><em>China Med Devices - Andover, MA</em></p>
+              <p>
+              <ul> 
+
+                <li>Assisting in collecting regulatory submission dossiers for Asia-Pacific countries – Japan, Australia and India and comparing with EU MDR</li>
+
+                <li>Collaborating in team to create a comparison table of key submission requirements (Technical and Clinical), fees and pathways for submissions in each country</li>
+
+                <li>Preparing detailed map and process of each defined countries key requirements and authorities responsible for regulatory approval</li>
+
+                <li>Working in collaboration with teams to discuss key Quality deliverables and QMS standards to be met for every Technical and Clinical aspect</li>
+
+<li>Understanding International Harmonization efforts for each country and contrast with Global Harmonization effort</li>
+
+<li>Helping the sponsor to make decision, the company should expand its regulatory and clinical affairs services to other Asia key countries such as Japan, Australia, India</li>
+
+
+              </ul>
+              </p>
+            </div>
+
+
+
             <div class="resume-item">
               <h4>Regulatory Reimbursement Lead Intern</h4>
               <h5>09/2020 - 12/2020</h5>
