--- a/resume.html
+++ b/resume.html
@@ -97,14 +97,14 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Two years of experience supporting design of regulatory strategies, Q-sub meeting documents, preparing FDA compliant dossiers and preparation of eCTD – compliant dossiers for submission to health authorities in the US, EU, China, and Japan. Professional experience includes preparation of Informed Consent Form, Clinical Protocol, IDE, IFUs, Market Analysis Report and Reimbursement strategy in multiple therapeutic areas and product types for medical devices spans multiple therapeutic areas and product types, including drugs, biologics, and medical devices. Ambitious, detail-oriented, dedicated professional with demonstrated ability to effectively collaborate in a matrix environment. Demonstrated success in problem solving. Academic experience in Pre and Post marketing safety reporting for FDA and EMA, 510(k), Regulatory Business Strategy, Pre and Post marketing safety reporting for FDA and EMA, CAPA for Warning letters and REMS. Proficiency in Regulatory Intelligence for Cosmetics and Predicate devices.  </p>
+          <p>1+ years of experience supporting design of regulatory strategies, Q-sub meeting documents, preparing FDA compliant dossiers and preparation of eCTD – compliant dossiers for submission to health authorities in the US, EU, China, and Japan. Professional experience includes preparation of Informed Consent Form, Clinical Protocol, IDE, IFUs, Market Analysis Report and Reimbursement strategy in multiple therapeutic areas and product types for medical devices spans multiple therapeutic areas and product types, including drugs, biologics, and medical devices. Ambitious, detail-oriented, dedicated professional with demonstrated ability to effectively collaborate in a matrix environment. Demonstrated success in problem solving. Academic experience in Pre and Post marketing safety reporting for FDA and EMA, 510(k), Regulatory Business Strategy, Pre and Post marketing safety reporting for FDA and EMA, CAPA for Warning letters and REMS. Proficiency in Regulatory Intelligence for Cosmetics and Predicate devices.  </p>
         </div>
 
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
-              <p><em>Innovative and deadline-driven Regulatory Affairs Professional with 2 years of experience designing and developing Regulatory Product Development profile from initial concept to final, polished deliverable.</em></p>
+              <p><em>Innovative and deadline-driven Regulatory Affairs Professional with 1+ years of experience designing and developing Regulatory Product Development profile from initial concept to final, polished deliverable.</em></p>
               <p>
               <ul>
                 <li>Boston, MA </li>
@@ -182,23 +182,23 @@
 
 
 <div class="resume-item">
-              <h4>Regulatory Intelligence, Medical Devices </h4>
+              <h4>Regulatory Intelligence Intern </h4>
               <h5>01/2021 - Present</h5>
               <p><em>China Med Devices - Andover, MA</em></p>
               <p>
               <ul> 
 
-                <li>Assisting in collecting regulatory submission dossiers for Asia-Pacific countries – Japan, Australia and India and comparing with EU MDR</li>
+                <li>Collected regulatory submission information for ASEAN countries – Japan, Australia and India and compared regulatory submission and life cycle requirements with EU MDR 2017/745</li>
 
-                <li>Collaborating in team to create a comparison table of key submission requirements (Technical and Clinical), fees and pathways for submissions in each country</li>
+                <li>Prepared detailed map and process of each defined countries key requirements and authorities responsible for regulatory approval </li>
 
-                <li>Preparing detailed map and process of each defined countries key requirements and authorities responsible for regulatory approval</li>
+                <li>Collaborated in teams to create a comparison table of key Technical and clinical submission requirements, fees and pathways for submissions in each country</li>
 
-                <li>Working in collaboration with teams to discuss key Quality deliverables and QMS standards to be met for every Technical and Clinical aspect</li>
+                <li>Composed life cycle development and regulatory approval detailed information for EU, Australia, Japan and India medical device regulation including ISO 14155:2011 and ISO 13495:2013 requirements in submission</li>
 
-<li>Understanding International Harmonization efforts for each country and contrast with Global Harmonization effort</li>
+<li>Understood Global Harmonization efforts for each country including post marketing requirements </li>
 
-<li>Helping the sponsor to make decision, the company should expand its regulatory and clinical affairs services to other Asia key countries such as Japan, Australia, India</li>
+<li>Helped sponsor to make decision, the company should expand its regulatory and clinical affairs services to other Asia key countries such as Japan, Korea, Australia, India</li>
 
 
               </ul>
@@ -208,17 +208,26 @@
 
 
             <div class="resume-item">
-              <h4>Regulatory Reimbursement Lead Intern</h4>
-              <h5>09/2020 - 12/2020</h5>
+              <h4>Regulatory Associate, Medical Devices Intern</h4>
+              <h5>09/2020 - Present</h5>
               <p><em>Breegi Scientific - Brookline, MA </em></p>
               <p>
               <ul>
                 <li>Prepared Regulatory Reimbursement Strategy for US to provide a rationale on Medical Device reimbursement and Target payor Breegi could target for reimbursement</li>
-                <li>Delivered detailed reimbursement methods, process flow, ICD Codes and inpatient and outpatient setting for reimbursement parties of different procedures, services and supplies in Microsoft PowerPoint for filing toInsurance agencies and hospitals</li>
-<li>Presented Medicare payment systems, map of procedures and medical claims submission and medical coveragedetermination by healthcare professionals and insurance agencies</li>
-<li>Conducted market analysis for investors interested to invest in Breegi’s medical device – NICI to set up coveragepolicies and claims</li>
+                
+<li>Delivered detailed reimbursement methods, process flow, ICD Codes and inpatient and outpatient setting for reimbursement parties in Microsoft PowerPoint </li>
 
 
+<li>Analyzed market data to predict incubator market in Asia-Pacific region and created a NICI market analysis in MS Power point</li>
+
+
+<li>Worked in teams to prepare Q-sub for an infant Incubator – NICI</li> 
+
+<li>Researched secondary predicate device to match NICI’s IFU and compiled questions to be cleared for the device dossier from the FDA</li> 
+
+<li>Collected information for Turkey Medical Device regulations from Turkish Medicines and Medical Devices Agency (TMMDA) </li> 
+
+<li>•	Worked in teams to gather import and export regulations and EU/CE marking incentives for Neonatal Incubator – NICI  </li> 
               </ul>
               </p>
             </div>
@@ -228,47 +237,47 @@
               <p><em>Global Regulatory Partners - Waltham, MA</em></p>
               <p>
               <ul>
-                <li>Helped with International product submissions for Medical Devices and IVDs</li>
+                <li>Helped with creating dossiers for Drugs, Biologics and Medical Devices for US submissions</li>
 
-                <li>Created submission strategy for clients – Dalton Bioscience (China) and Bain Medical Equipment (China) for US approval</li>
+<li>Collaborated with regulatory experts and gained familiarity with GAP Analysis for DH3 (HPV detection kit) </li>
 
-                <li>Assisted in preparing Clinical Trial Protocol for Nucleic Acid Detection kit – DH3 (HPV) for Dalton Bioscience</li>
-
-                <li>Assisted in filing IFU for Dalton Bioscience in the US, used BD Onclarity and Roche Cobus IFU for predicate devices</li>
-
-<li>Collaborated with regulatory experts and gained familiarity with GAP Analysis for DH3</li>
+<li>Assisted in filing IFU for Dalton Bioscience in the US for DH3 </li>
 
 <li>Generated Q-Sub request for an IDE submission of Hollow Fiber Dialyzer for Bain Medical Equipment</li>
 
 <li>Reported progress and interacted with client companies every week to provide information relating to the submission</li>
 
-<li>Reviewed packaging performance at different temperature with sampling plan for bacterial endotoxin</li>
+<li>Drafted regulatory requirements, standards, classification, sterility testing, classification and quality requirements in MS Excel for PPE for US and EU</li>
 
-<li>Worked in cross – functional collaboration with experts and gained familiarity with Module 3 of the IND eCTD submission</li>
+<li>Edited and formatted QMS and Manufacturing information, Volume IV dossier for Da Vinci Xi device for SS Innovation </li>
 
-<li>Reviewed and edited an IND application of SLYVANT in eCTD format for treatment of COVID-19 for EUSA Pharma</li>
+<li>Assisted in preparing Clinical Trial Protocol for Nucleic Acid Detection kit – DH3 (HPV) for Dalton Bioscience </li>
 
-<li>Reviewed Module 3 and 5 of NDA for 9 different cold kits for Curium Pharma</li>
+<li>Reviewed packaging performance at different temperatures with sampling plan for bacterial endotoxin for Volume 4 for IDE application</li>
 
-<li>Successfully submitted NDAs for Striascan, Tc 99m Sestamibi injection, Pulmotech MAA, Technescan HDP and V4, Ultratag RBC and Sodium I-123</li>
+<li>Worked in cross – functional collaboration with regulatory experts to prepare Module 3 of the IND submission</li>
 
-<li>Collaborated with regulatory departments to review Quality specifications for Cold kits</li>
+<li>Reviewed and edited an IND application of SLYVANT for treatment of COVID-19 for EUSA Pharma </li>
 
-<li>Reported progress and interacted with Curium Pharma every week to provide information relating to NDA submission for cold kits</li>
+<li>Reviewed Module 3 (Quality) and 5 (Clinical) of NDA for 9 different cold kits for Curium Pharma </li>
 
-<li>Assisted in Clinical Trial Protocol for Nucleic Acid Detection kit for Dalton Bioscience in the US</li>
+<li>Helped compiling NDAs for Striascan, Tc 99m Sestamibi injection, Pulmotech MAA, Technescan HDP, Technescan V4, Ultratag RBC and Sodium I-123</li>
 
-<li>Prepared aim, background, research site, inclusion and exclusion criteria for Phase II clinical protocol for checking
-clinical accuracy of cervical cytology in ASC-US and evaluating clinical effect of the detection kit for first line screening in women.</li>
+<li>Collaborated with regulatory departments of Curium Pharma to review Quality specifications for Cold kits </li>
+
+<li>Helped report progress and interacted with client every week to provide information relating to NDA submission for cold kits </li>
+
+<li>Assisted in Clinical Trial Protocol for Nucleic Acid Detection kit for Dalton Bioscience in the US </li>
+
+<li>Prepared aim, background, research site, inclusion and exclusion criteria for Phase II clinical protocol for checking clinical accuracy of cervical cytology in ASC-US and evaluating clinical effect of the detection kit for first line screening in women</li>
+
+
 
               </ul>
               </p>
             </div>
 
 
-
-
-<!-- Third Experience -->
 
 <div class="resume-item">
               <h4>Regulatory Intelligence Intern</h4>
