--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
 
 
 
-  <title>Portfolio - Kelly Bootstrap Template</title>
+  <title>Shanvi's Website</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -53,8 +53,8 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: Kelly - v2.1.0
-  * Template URL: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/
+  * Name: Shanvi's Website
+  * URL: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
@@ -66,7 +66,7 @@
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
 
-      <h1 class="logo"><a href="index.html">Kelly</a></h1>
+      <h1 class="logo"><a href="index.html">Shanvi</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -82,10 +82,10 @@
       </nav><!-- .nav-menu -->
 
       <div class="header-social-links">
-        <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></i></a>
+       <a href="https://twitter.com/shanvipatel" class="twitter"><i class="icofont-twitter"></i></a>
+        <a href="https://www.facebook.com/shanvi.patel.33821189" class="facebook"><i class="icofont-facebook"></i></a>
+        <a href="https://www.instagram.com/shanvi305/" class="instagram"><i class="icofont-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/shanvi305/" class="linkedin"><i class="icofont-linkedin"></i></i></a>
       </div>
 
     </div>
@@ -100,7 +100,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Apart from what I am professionally, here's what I am in the world.</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -253,7 +253,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Kelly</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Shanvi</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
